[package]
name = "whatever-rs"
version = "0.1.0"
edition = "2018"
authors = ["Moheeb Aljaroudi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "whatever"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
ureq = { version = "2.2.0", features = ["json"] }
